# xlauncher

./: .gitignore  README.md
presale-sc/vestax-sft/: Cargo.toml  mxpy.data-storage-testnet.json  mxpy.data-storage.json
presale-sc/vestax-sft/meta/: Cargo.toml
presale-sc/vestax-sft/meta/src/: main.rs
script/: package.json
script/abi/: x-raffle.abi.json  x-swap.abi.json
script/src/: 1-1-set-settings.ts  1-2-open-genesis-round.ts  1-3-inject-prize.ts  1-5-buy-tickets.ts  1-6-claim-prize.ts  2-1-set-settings.ts  config.ts  provider.ts
x-raffle/: .gitignore  Cargo.toml  README.md  erdpy.data-storage-testnet.json  erdpy.data-storage.json
x-raffle-test/: package.json
x-raffle-test/abi/: x-raffle.abi.json  x-raffle.wasm
x-swap/: .gitignore  Cargo.toml  README.md  erdpy.data-storage.json  notes.md
x-swap-test/: .gitignore  package.json
x-swap/interaction/: devnet.snippets.sh  testnet.snippets.sh
x-swap/mandos/: 1-init.scen.json  adder.scen.json
x-swap/meta/: Cargo.toml
x-swap/meta/src/: main.rs
x-swap/notes/: x-swap-notes.md  x-swap-specs.md
x-swap/src/: admin.rs  config.rs  constant.rs  data.rs  event.rs  lib.rs  state.rs  storage.rs  swap_data.rs  user.rs  view.rs  x-swap.rs  xswap.rs
x-swap/test-script/: package.json
x-swap/test-script/src/: 3-accept-offer.ts  config.ts
x-swap/tests/: adder_mandos_constructed_raw_test.rs  adder_mandos_constructed_with_calls_test.rs  adder_mandos_constructed_with_results_test.rs  adder_mandos_rs_test.rs  adder_test.rs  mandos_rust_test.rs  rust_test.rs
x-swap/wasm/: Cargo.toml
x-swap/wasm/src/: lib.rs
(+69 files in other folders)
