[package]
name = "x-swap"
version = "0.1.0"
edition = "2021"
authors = ["Bogdan Oloeriu <bogdan.oloeriu@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path='src/x-swap.rs'

[dependencies]

[dependencies.elrond-wasm]
version = "0.36.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.36.0"
