[package]
name = "x-swap"
version = "0.1.0"
authors = [ "Bogdan Oloeriu <bogdan.oloeriu@gmail.com>", "Ice <icegriffin1122@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "src/xswap.rs"

[dependencies.elrond-wasm]
version = "0.36.1"

[dev-dependencies.elrond-wasm-debug]
version = "0.36.1"
